# oopl_game

./: 2025OOPL_Final.md  CMakeLists.txt  Note.md  README.md
Note/: Effect.md  Note.md
PTSD/example/src/: App.cpp
PTSD/include/Util/: GameObject.hpp
Resources/Shader/: HealthBar.vert
Resources/shaders/: Circle.frag  Ellipse.frag  Projectile.frag  Projectile.vert
include/: App.hpp  AppUtil.hpp  Attack.hpp  BackGround.hpp  Character.hpp  DefeatScreen.hpp  Enemy.hpp  HealthBarUI.hpp  LevelUI.hpp  Object.hpp  PauseScreen.hpp  PhaseManger.hpp  ProgressBar.hpp  ProgressIcon.hpp  ShopUI.hpp  Skill.hpp  SkillUI.hpp  StageTitle.hpp  TextObject.hpp
include/Attack/: Attack.hpp  AttackManager.hpp  AttackPattern.hpp  AttackPatternFactory.hpp  CircleAttack.hpp  CornerBulletAttack.hpp  EnemyAttackController.hpp  RectangleAttack.hpp
include/Effect/: CircleEffect.hpp  CompositeEffect.hpp  Effect.hpp  EffectFactory.hpp  EffectManager.hpp  IEffect.hpp  ProjectileEffect.hpp  RectEffect.hpp  SkillEffect.hpp
include/Effect/Modifier/: EdgeModifier.hpp  FillModifier.hpp  MovementModifier.hpp
include/Effect/Shape/: BaseShape.hpp  CircleShape.hpp  EllipseShape.hpp  RectangleShape.hpp
src/: AppStart.cpp  AppUpdate.cpp  AppUtil.cpp  Character.cpp  CircleEffect.cpp  Collides.cpp  DefeatScreen.cpp  Enemy.cpp  EnemyHealthBar.cpp  HealthBarUI.cpp  LevelUI.cpp  Object.cpp  PhaseManager.cpp  ProjectileEffect.cpp  ShopUI.cpp  Skill.cpp  SkillUI.cpp  main.cpp
src/Attack/: Attack.cpp  AttackManager.cpp  AttackPattern.cpp  AttackPatternFactory.cpp  CircleAttack.cpp  CornerBulletAttack.cpp  EnemyAttackController.cpp  LaserAttack.cpp  RectangleAttack.cpp
src/Effect/: CompositeEffect.cpp  EffectFactory.cpp  EffectManager.cpp
src/Effect/Modifier/: AnimationModifier.cpp  EdgeModifier.cpp  FillModifier.cpp  MovementModifier.cpp
src/Effect/Shape/: BaseShape.cpp  CircleShape.cpp  EllipseShape.cpp  RectangleShape.cpp
